# offersteady

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  package-lock.json  package.json
apps/backend/: README.md  pyproject.toml
apps/backend/app/: __init__.py  deps.py  desktop_release_manifest.json  main.py  material_formats.py  worker.py
apps/backend/app/adapters/: oss_storage.py
apps/backend/app/api/: v1.py
apps/backend/app/core/: config.py  errors.py  logging.py  request_context.py  responses.py
apps/backend/app/middleware/: request_context.py
apps/backend/app/modules/: __init__.py  authentication.py  billing.py  common.py  document_processing.py  document_service.py  job_description.py  knowledge.py  knowledge_retrieval.py  live_answer.py  (+6 more)
apps/backend/migrations/: README.md
apps/backend/scripts/: benchmark_realtime_asr_pipeline.py  profile_live_conversation_latency.py
apps/backend/tests/: test_commercial_billing_persistence.py  test_desktop_download.py  test_document_parser_service.py  test_embedding_pipeline.py  test_end_to_end_integration.py  test_foundation.py  test_integration_verification.py  test_logging_redaction.py  test_material_deletion.py  test_material_object_keys.py  test_material_rag_e2e.py  test_oss_upload_policy.py  test_points_redemption_persistence.py  test_production_runtime_gates.py  test_prompt_quality.py  test_realtime_asr_audio_chunking.py  test_realtime_asr_gateway_lifecycle.py  test_realtime_asr_timeout_budget.py  test_realtime_redis_recovery.py  test_realtime_runtime_evidence.py  test_realtime_transport_v2.py
(+644 files in other folders)
